Fixed dark mode bug in Projects

--- a/theme_dark_custom.scss
+++ b/theme_dark_custom.scss
@@ -3,13 +3,10 @@
 $body-bg: #181818;
 $body-color: white;
 $link-color: #75AADB;
+$card-bg: #2c2c2c;
+$card-border-color: #444;
+
 
 // Code blocks
 $code-block-bg-alpha: -.8;
 
-.dark-mode {
-  .quarto-grid-item {
-    background-color: #333; /* A darker background for dark mode */
-    color: #fff; /* White text for readability */
-  }
-}
